// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MUTATION MOCK TESTS Mock changePassword 1`] = `
Object {
  "changeUserPassword": Object {
    "message": "Ratonero Bodeguero Andaluz",
    "success": true,
  },
}
`;

exports[`MUTATION MOCK TESTS Mock createTeachingPreferences 1`] = `
Object {
  "createTeachingPreference": Object {
    "message": "Chinese Chongqing Dog",
    "success": true,
  },
}
`;

exports[`MUTATION MOCK TESTS Mock createUser 1`] = `undefined`;

exports[`MUTATION MOCK TESTS Mock createUser 2`] = `
Object {
  "createUser": Object {
    "message": "I'll index the bluetooth EXE feed, that should port the OCR circuit!",
    "password": "Thai",
    "success": true,
    "username": "Odie",
  },
}
`;

exports[`MUTATION MOCK TESTS Mock generateSchedule 1`] = `
Object {
  "generateSchedule": Object {
    "message": "Bull Arab",
    "success": true,
  },
}
`;

exports[`MUTATION MOCK TESTS Mock login 1`] = `
Object {
  "login": Object {
    "message": "regional",
    "success": true,
    "token": "63.230.21.209",
  },
}
`;

exports[`MUTATION MOCK TESTS Mock logout 1`] = `
Object {
  "logout": Object {
    "message": "client-server",
    "success": true,
    "token": "76.253.96.127",
  },
}
`;

exports[`MUTATION MOCK TESTS Mock resetPassword 1`] = `
Object {
  "resetPassword": Object {
    "message": "_X}Ryjx@l}",
    "password": "South Jordan",
    "success": true,
  },
}
`;
